# gnap

./: .gitignore  README.md
dao/: Cargo.toml
dao/src/: auth.rs  auth_service.rs  authservice.rs  cache.rs  db.rs  lib.rs  resource.rs  resource_service.rs  service.rs  token.rs  token_service.rs  tokenservice.rs
errors/: Cargo.toml
errors/src/: lib.rs
gnap_as/: .env  Cargo.toml  instance_id.json
gnap_as/.keystore/: cert.pem  key.pem
gnap_as/src/: lib.rs  main.rs
gnap_as/src/grant/: request.rs
gnap_as/src/handlers/: auth.rs  db.rs  mod.rs  resources.rs  tokens.rs  transaction.rs  well_known.rs
gnap_as/src/routes/: db.rs  login.rs  mod.rs  rs.rs  token.rs  tokens.rs  transaction.rs  well_known.rs
gnap_as/src/utils/: mod.rs
gnap_as/static/: 404.html  build-manifest.json  login.html  next-server.js.nft.json  prerender-manifest.json  required-server-files.json
gnap_as/static/_next/static/7AUThx_Zkuzeyfz6Ouvex/: _buildManifest.js
gnap_as/static/_next/static/Qa73W1hE4lx1jLhEPI8IW/: _buildManifest.js
gnap_as/static/_next/static/chunks/pages/: login-9f447cb558e56855.js  login-bc3bdd29df515324.js
gnap_as/static/_next/static/css/: 26951ca651ee010f.css
gnap_as/static/server/: pages-manifest.json
gnap_as/static/server/pages/: 404.html  500.html  _document.js.nft.json  _error.js.nft.json  login.html  login.js.nft.json
gnap_as/static/static/chunks/: 859-5eba15d634140280.js
gnap_as/static/static/chunks/pages/: login-3e7d5883e8d7166d.js
gnap_as/static/static/fKQeoCZ9SYk0UFfgNBbds/: _buildManifest.js
gnap_client/: Cargo.toml
gnap_client/src/: gnap_session.rs  lib.rs  main.rs
model/: Cargo.toml
model/src/: account.rs  client.rs  credentials.rs  gnap.rs  grant.rs  instances.rs  introspect.rs  lib.rs  oauth.rs  oidc.rs  resource.rs  tokens.rs  transaction.rs  users.rs
mongodb-init/: init.js
serde_utils/: Cargo.toml
serde_utils/src/: lib.rs  string_or_struct.rs
