[package]
name = "dao"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.3.4"
mongodb = "=2.1.0"
futures = "0.3.21"
log = "0.4.14"
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
errors = {path = "../errors"}
model = {path = "../model"}
rand = "0.8.5"
