[package]
name = "gnap_as"
version = "0.1.0"
edition = "2018"
authors = ["David Skyberg <davidskyberg@gmail.com>"]
repository = "https://github.com/dskyberg/gnap"
description = "A very simply GNAP Authorization Server written in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-utils = "3.0.0"
actix-web = { version = "4.0.0-beta.21", features = ["openssl"] }
openssl = "0.10.38"
dotenv = "0.15.0"
mongodb = "2.1.0"
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
pretty_env_logger = "0.4.0"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures = "0.3.19"
log4rs = "1.0.0"
log = "0.4.14"
jsonwebtoken = "7.2.0"
errors = {path = "../errors"}
model = {path = "../model"}
dao = {path = "../dao"}
get_if_addrs = "0.5.3"
