[package]
name = "model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
jsonwebtoken = "7.2.0"
redis = "0.21.5"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
serde_utils = {path = "../serde_utils"}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
void = "1.0.2"
errors = {path = "../errors"}

